serverdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-project-retro
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server-project-retro
        image: koonkoo2/project-retro:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: project-retro
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
  - port: 80
    targetPort: 80
