service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-retro
spec:
  type: NodePort
  selector:
    app: project-retro
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30200
