ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: projectretro.com
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: project-retro
            port: 
              number: 80
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: client-project-retro
            port: 
              number: 80
